--- a/VRChat/04/1212304.html
+++ b/VRChat/04/1212304.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "3oFZxk6R1diTvsdG8HxSvbHJWyBa8I+1TWf9xZzt6Y0="></script>
+    "2Q/sxv2WeJ6X4t8fqGwfQTjwKUupi7omgtbjWzsTjDo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル 「写真機OOTO」","description":"3Dモデル「写真機OOTO」\n\n■内容物\nCamera_Ooto.unitypackage\ncamera_ooto.fbx\ncamera_ooto_lowpoly.fbx\ntextures\nreadme.txt\n\n\n■導入方法\nUnityを使用する場合はUnitypackageファイルをインポートしてください。\n\n\n■利用規約\n【はじめに】\n この利用規約(以下「本規約」といいます。)は本データ使用者(以下「ユーザー」といいます。)が本データを利用する場合の一切の行為に適用されます。\n 本規約は本データの利用条件を定めるものです。\n ユーザーは本データを利用することにより、本規約の全ての記載内容について同意したものとみなします。\n\n\n【本規約の変更】\n 本規約は製作者の判断によりいつでも任意に変更できることとします。\n 変更後の本規約は、製作者がその内容を公表した時点より効力を生じるものとします。\n\n\n【利用環境の整備】\n 本データを利用するために必要なあらゆるハード・ソフトウェア等の整備はユーザーの負担と責任において行うものとします。\n\n\n【利用許可範囲】\n VRChat、VirtualCast、ゲーム、映像等のコンテンツへの利用を許可します。\n 本データを加工しての利用を許可します。\n\n\n【本データの知的財産権】\n ユーザーは製作者の知的財産権を侵害しない義務を負います。\n 本データの知的財産権及びそれらに含まれる全ての権利は製作者に帰属するものとします。\n 本データを加工しても著作権は製作者に帰属するものとします。\n\n\n【禁止事項】\n 本データ、加工データ、データの一部を配布や販売する行為を禁止します。\n 個人や団体への誹謗中傷、反社会的行為に利用する行為を禁止します。\n 第三者の権利を侵害する行為を禁止します。\n その他、製作者が不適切と判断する行為を禁止します。\n\n\n【免責事項】\n 製作者は本データについて技術的不正確さがないこと、不具合が生じないことを一切保証しません。\n ユーザーまたは第三者が本データを利用して生じたいかなる不利益も製作者は一切責任を負いません。\n\n\n\n\n【問い合わせ先】\n https://twitter.com/kurvezwei\n\n更新履歴\nVer1.0 新規作成","url":"https://booth.pm/ja/items/1212304","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/60406f30-23fd-4bc2-921c-e753a2c6d6e9/i/1212304/817a99d3-193d-43d6-a7c5-2b01e991d353_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3oFZxk6R1diTvsdG8HxSvbHJWyBa8I+1TWf9xZzt6Y0="></script>
+    nonce="2Q/sxv2WeJ6X4t8fqGwfQTjwKUupi7omgtbjWzsTjDo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -177,7 +177,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              74
+                              75
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -192,7 +192,7 @@
                           "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              74
+                              75
                             </div>
                           </div></a>
                         </div>
@@ -522,7 +522,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
